--- a/app/src/main/res/menu/layout_menu.xml
+++ b/app/src/main/res/menu/layout_menu.xml
@@ -19,6 +19,13 @@
             app:showAsAction="never"
             android:icon="@drawable/ic_baseline_login_24"/>
 
+        <item
+            android:title="@string/logout"
+            android:id="@+id/logout"
+            app:showAsAction="never"
+            android:icon="@drawable/ic_baseline_login_24"/>
+
+
     </group>
 
 
